PyMaker/datas/object2/RawHTML/i4701/Python_DOC_referPages.python-str-error.txt
<div class="post-text" itemprop="text">
<p>I am using the following script : <a href="https://github.com/dimitar-petrov/backtrader/blob/d952bbf25ae5c012b8cd1d71f4064d0042cd74cc/contrib/utils/iqfeed-to-influxdb.py" rel="nofollow noreferrer">python script </a></p>
<pre><code># Import IQFeed Historical Data to InfluxDB
# 
# optional arguments:
#   -h, --help            show this help message and exit
#   --ticker TICKER       Ticker to request data for. (default: SPY)
#   --ticker-list TICKER_LIST
#                         Path to folder to create files. (default: None)
#   --dbhost DBHOST       InfluxDB hostname. (default: None)
#   --dbport DBPORT       InfluxDB port number. (default: None)
#   --iqhost IQHOST       IQfeed Connect hostname. (default: None)
#   --iqport IQPORT       IQfeed Connect port number. (default: None)
#   --username USERNAME   InfluxDB username. (default: None)
#   --password PASSWORD   InfluxDB password. (default: None)
#   --database DATABASE   InfluxDB database to use. (default: None)
#   --fromdate FROMDATE   Starting date for historical download with format:
#                         YYYY[-MM-DDTHH:MM:SS]. (default: None)
#   --todate TODATE       Ending date for historical download with format: YYYY
#                         [-MM-DDTHH:MM:SS]. (default: None)
#   --debug               Turn on debug logging level. (default: False)
#   --info                Turn on info logging level. (default: False)
</code></pre>
<p>I am running it with the following input:</p>
<blockquote>
<p>python influx.py --ticker SPY --dbhost 127.0.0.1 --dbport 8088
  --iqhost 127.0.0.1 --iqport 9100 --database SPY --fromdate 2017 --todate 2018</p>
</blockquote>
<p>and get a str error.  even if i change the dates to "20180101" still get the error on line 59.  i can not seem to be able to debug it some quick reference. </p>
<p>the error points to the the : when declaring cmd: str</p>
<blockquote>
<p>def _send_cmd(self, cmd: str):</p>
</blockquote>
<p>if i remove that declaration then it just gives me another error on line 64 with the same issue saying thhe : is wrong in declaring as a str</p>
<blockquote>
<p>def iq_query(self, message: str):</p>
</blockquote>
<p>The error I got was:</p>
<pre><code>File "influx.py", line 59
  def _send_cmd(self, cmd: str):
                         ^ SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>That script requires Python 3.5 and above, but you are using Python 3.4. See <a href="https://docs.python.org/3/library/typing.html" rel="nofollow noreferrer">typing</a> for more information.</p>
<p>You can upgrade to the latest version of Python or simply remove <code>: str</code> and <code>: np.array</code> from the code.</p>
</div>
<span class="comment-copy">What exactly is the error? "str error" is vague.  Can you please include the entire error? That said, it sounds like you're running this using Python 2, but it requires Python 3.</span>
<span class="comment-copy">python -V = Python 3.4.5 :: Continuum Analytics, Inc.</span>
<span class="comment-copy">entire error :  File "influx.py", line 59     def _send_cmd(self, cmd: str):                            ^ SyntaxError: invalid syntax</span>
<span class="comment-copy">the ^ sits on the : after cmd</span>
<span class="comment-copy"><code># (influxDB) :/tmp/backtrader$ sudo python influx.py --ticker SPY --database SPYS  --fromdate 2017 --today 2018 #   File "influx.py", line 59 #     def _send_cmd(self, cmd: str): #                            ^ # SyntaxError: invalid syntax #  # (influxDB) :/tmp/backtrader$ python -V # Python 3.6.4 :: Anaconda, Inc.</code></span>
<span class="comment-copy">oh that defiantly did not format right. was just trying to show you even with 3.6.4 i get the same error.</span>
<span class="comment-copy">funny. if i delete all the typing, i get a whole other bag of chips.  which i know is not true:  line 10, in &lt;module&gt;     import pandas as pd ImportError: No module named pandas</span>
<span class="comment-copy">Looks like you also have two different versions of Python installed. You use <code>sudo</code> to run it, but none to check version. Make sure those two executions use the same Python version.</span>
<span class="comment-copy">crap!  thats actually the problem all along.  yes, I am running the script with in a conda environment, not realizing i was using sudo which means it would use the system python.</span>
